[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Hamed BENAZHA <hamed.benazha@lis-lab.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
lightning = "^2.2.1"
torchvision = "^0.17.1"
wandb = "^0.16.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
